Implemented story loading functionality for dashboard and details.